--- a/flashcards.ui
+++ b/flashcards.ui
@@ -71,7 +71,7 @@ background-color: rgb(0, 0, 128);</string>
        <enum>QFrame::NoFrame</enum>
       </property>
       <property name="currentIndex">
-       <number>0</number>
+       <number>1</number>
       </property>
       <widget class="QWidget" name="loadPage">
        <property name="sizePolicy">
@@ -1032,7 +1032,7 @@ background-color: rgb(1, 0, 177);</string>
              <enum>QFrame::Raised</enum>
             </property>
             <property name="currentIndex">
-             <number>1</number>
+             <number>0</number>
             </property>
             <widget class="QWidget" name="front">
              <layout class="QVBoxLayout" name="verticalLayout_6">
@@ -1079,6 +1079,9 @@ background-color: rgb(1, 0, 177);</string>
                   </property>
                   <property name="alignment">
                    <set>Qt::AlignCenter</set>
+                  </property>
+                  <property name="wordWrap">
+                   <bool>true</bool>
                   </property>
                  </widget>
                 </item>
@@ -1153,20 +1156,8 @@ background-color: rgb(1, 0, 177);</string>
             </widget>
             <widget class="QWidget" name="back">
              <layout class="QVBoxLayout" name="verticalLayout_4">
-              <property name="leftMargin">
-               <number>0</number>
-              </property>
-              <property name="topMargin">
-               <number>0</number>
-              </property>
-              <property name="rightMargin">
-               <number>0</number>
-              </property>
-              <property name="bottomMargin">
-               <number>0</number>
-              </property>
               <item>
-               <spacer name="backTopVSpacer">
+               <spacer name="backUpperVSpacer">
                 <property name="orientation">
                  <enum>Qt::Vertical</enum>
                 </property>
@@ -1179,32 +1170,65 @@ background-color: rgb(1, 0, 177);</string>
                </spacer>
               </item>
               <item>
-               <widget class="QLabel" name="defLabel">
-                <property name="minimumSize">
-                 <size>
-                  <width>0</width>
-                  <height>150</height>
-                 </size>
-                </property>
-                <property name="font">
-                 <font>
-                  <family>Adobe Arabic</family>
-                  <pointsize>30</pointsize>
-                 </font>
-                </property>
-                <property name="styleSheet">
-                 <string notr="true">color: rgb(0, 0, 0);</string>
-                </property>
-                <property name="text">
-                 <string>Flashcard Back</string>
-                </property>
-                <property name="alignment">
-                 <set>Qt::AlignCenter</set>
-                </property>
-               </widget>
+               <layout class="QHBoxLayout" name="horizontalLayout_6">
+                <item>
+                 <spacer name="horizontalSpacer_3">
+                  <property name="orientation">
+                   <enum>Qt::Horizontal</enum>
+                  </property>
+                  <property name="sizeHint" stdset="0">
+                   <size>
+                    <width>40</width>
+                    <height>20</height>
+                   </size>
+                  </property>
+                 </spacer>
+                </item>
+                <item>
+                 <widget class="QLabel" name="defLabel">
+                  <property name="minimumSize">
+                   <size>
+                    <width>0</width>
+                    <height>150</height>
+                   </size>
+                  </property>
+                  <property name="font">
+                   <font>
+                    <family>Adobe Arabic</family>
+                    <pointsize>24</pointsize>
+                   </font>
+                  </property>
+                  <property name="styleSheet">
+                   <string notr="true">color: rgb(0, 0, 0);</string>
+                  </property>
+                  <property name="text">
+                   <string>Flashcard Back</string>
+                  </property>
+                  <property name="alignment">
+                   <set>Qt::AlignCenter</set>
+                  </property>
+                  <property name="wordWrap">
+                   <bool>true</bool>
+                  </property>
+                 </widget>
+                </item>
+                <item>
+                 <spacer name="horizontalSpacer_4">
+                  <property name="orientation">
+                   <enum>Qt::Horizontal</enum>
+                  </property>
+                  <property name="sizeHint" stdset="0">
+                   <size>
+                    <width>40</width>
+                    <height>20</height>
+                   </size>
+                  </property>
+                 </spacer>
+                </item>
+               </layout>
               </item>
               <item>
-               <spacer name="backBottomVSpacer">
+               <spacer name="backLowerVSpacer">
                 <property name="orientation">
                  <enum>Qt::Vertical</enum>
                 </property>
@@ -1217,7 +1241,7 @@ background-color: rgb(1, 0, 177);</string>
                </spacer>
               </item>
               <item>
-               <layout class="QHBoxLayout" name="backHLayout_2">
+               <layout class="QHBoxLayout" name="backBottomHLayout">
                 <item alignment="Qt::AlignHCenter|Qt::AlignVCenter">
                  <widget class="QPushButton" name="incorrectButton">
                   <property name="minimumSize">
@@ -1286,8 +1310,7 @@ font: bold 24pt &quot;Palatino Linotype&quot;;</string>
                    </font>
                   </property>
                   <property name="styleSheet">
-                   <string notr="true">color: rgb(0, 200, 0); border-radius: 5 px;
-background-color: rgb(204, 102, 255);</string>
+                   <string notr="true">color: rgb(0, 200, 0);</string>
                   </property>
                   <property name="text">
                    <string>✓</string>
@@ -1313,6 +1336,9 @@ background-color: rgb(204, 102, 255);</string>
               <width>16777215</width>
               <height>20</height>
              </size>
+            </property>
+            <property name="styleSheet">
+             <string notr="true"/>
             </property>
             <property name="value">
              <number>24</number>
