--- a/confirmdelete.ui
+++ b/confirmdelete.ui
@@ -20,8 +20,8 @@
       <widget class="QLabel" name="messageLabel">
        <property name="font">
         <font>
-         <family>Adobe Arabic</family>
-         <pointsize>24</pointsize>
+         <family>Verdana</family>
+         <pointsize>18</pointsize>
         </font>
        </property>
        <property name="text">
@@ -36,6 +36,12 @@
       <layout class="QHBoxLayout" name="buttonHLayout">
        <item alignment="Qt::AlignHCenter">
         <widget class="QDialogButtonBox" name="buttonDialog">
+         <property name="font">
+          <font>
+           <family>Verdana</family>
+           <pointsize>11</pointsize>
+          </font>
+         </property>
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
          </property>
