--- a/namemsgbox.ui
+++ b/namemsgbox.ui
@@ -16,10 +16,10 @@
   <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
-     <x>51</x>
+     <x>10</x>
      <y>10</y>
-     <width>231</width>
-     <height>101</height>
+     <width>324</width>
+     <height>104</height>
     </rect>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout">
@@ -61,23 +61,7 @@
        </widget>
       </item>
       <item>
-       <widget class="QPlainTextEdit" name="nameTextEdit">
-        <property name="maximumSize">
-         <size>
-          <width>500</width>
-          <height>20</height>
-         </size>
-        </property>
-        <property name="verticalScrollBarPolicy">
-         <enum>Qt::ScrollBarAlwaysOff</enum>
-        </property>
-        <property name="horizontalScrollBarPolicy">
-         <enum>Qt::ScrollBarAlwaysOff</enum>
-        </property>
-        <property name="lineWrapMode">
-         <enum>QPlainTextEdit::NoWrap</enum>
-        </property>
-       </widget>
+       <widget class="QLineEdit" name="nameLineEdit"/>
       </item>
      </layout>
     </item>
