--- a/flashcards.ui
+++ b/flashcards.ui
@@ -161,6 +161,54 @@
          </layout>
         </item>
         <item>
+         <layout class="QHBoxLayout" name="authorHLayout">
+          <item>
+           <spacer name="horizontalSpacer_11">
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>40</width>
+              <height>20</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+          <item>
+           <widget class="QLabel" name="authorLabel">
+            <property name="maximumSize">
+             <size>
+              <width>16777215</width>
+              <height>30</height>
+             </size>
+            </property>
+            <property name="font">
+             <font>
+              <pointsize>16</pointsize>
+             </font>
+            </property>
+            <property name="text">
+             <string>Jonah Majumder | 2019</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <spacer name="horizontalSpacer_6">
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>40</width>
+              <height>20</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+         </layout>
+        </item>
+        <item>
          <widget class="QFrame" name="loadHFrame">
           <property name="minimumSize">
            <size>
@@ -625,7 +673,6 @@ color: rgb(0, 0, 0);</string>
              <zorder>loadedLabel</zorder>
              <zorder>loadVSpacer2</zorder>
              <zorder>loadVSpacer1</zorder>
-             <zorder>horizontalLayoutWidget_2</zorder>
             </widget>
            </item>
            <item>
@@ -1607,8 +1654,8 @@ font: bold 24pt &quot;Palatino Linotype&quot;;</string>
                   <rect>
                    <x>0</x>
                    <y>0</y>
-                   <width>470</width>
-                   <height>72</height>
+                   <width>198</width>
+                   <height>46</height>
                   </rect>
                  </property>
                  <layout class="QHBoxLayout" name="horizontalLayout_11">
