--- a/flashcards.ui
+++ b/flashcards.ui
@@ -241,21 +241,16 @@
           </property>
           <layout class="QHBoxLayout" name="horizontalLayout_2">
            <item>
-            <spacer name="loadFarLSpacer">
-             <property name="font">
-              <font>
-               <family>Verdana</family>
-              </font>
-             </property>
+            <spacer name="horizontalSpacer_12">
              <property name="orientation">
               <enum>Qt::Horizontal</enum>
              </property>
              <property name="sizeType">
-              <enum>QSizePolicy::Expanding</enum>
+              <enum>QSizePolicy::Minimum</enum>
              </property>
              <property name="sizeHint" stdset="0">
               <size>
-               <width>25</width>
+               <width>5</width>
                <height>20</height>
               </size>
              </property>
@@ -265,7 +260,7 @@
             <widget class="QFrame" name="importFrame">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
-               <horstretch>0</horstretch>
+               <horstretch>1</horstretch>
                <verstretch>0</verstretch>
               </sizepolicy>
              </property>
@@ -398,48 +393,17 @@
                  </spacer>
                 </item>
                 <item>
-                 <widget class="QTextEdit" name="delimTextEdit">
-                  <property name="minimumSize">
-                   <size>
-                    <width>40</width>
-                    <height>20</height>
-                   </size>
-                  </property>
+                 <widget class="QLineEdit" name="delimLineEdit">
                   <property name="maximumSize">
                    <size>
                     <width>40</width>
-                    <height>20</height>
+                    <height>16777215</height>
                    </size>
                   </property>
                   <property name="font">
                    <font>
-                    <family>Verdana</family>
-                    <pointsize>14</pointsize>
-                    <weight>50</weight>
-                    <bold>false</bold>
+                    <pointsize>12</pointsize>
                    </font>
-                  </property>
-                  <property name="autoFillBackground">
-                   <bool>false</bool>
-                  </property>
-                  <property name="styleSheet">
-                   <string notr="true">background-color: rgb(255, 255, 255);
-color: rgb(0, 0, 0);</string>
-                  </property>
-                  <property name="inputMethodHints">
-                   <set>Qt::ImhNone</set>
-                  </property>
-                  <property name="verticalScrollBarPolicy">
-                   <enum>Qt::ScrollBarAlwaysOff</enum>
-                  </property>
-                  <property name="horizontalScrollBarPolicy">
-                   <enum>Qt::ScrollBarAlwaysOff</enum>
-                  </property>
-                  <property name="lineWrapMode">
-                   <enum>QTextEdit::NoWrap</enum>
-                  </property>
-                  <property name="acceptRichText">
-                   <bool>false</bool>
                   </property>
                  </widget>
                 </item>
@@ -466,26 +430,14 @@ color: rgb(0, 0, 0);</string>
              </layout>
             </widget>
            </item>
-           <item>
-            <spacer name="loadLSpacer">
-             <property name="font">
-              <font>
-               <family>Verdana</family>
-              </font>
-             </property>
-             <property name="orientation">
-              <enum>Qt::Horizontal</enum>
-             </property>
-             <property name="sizeHint" stdset="0">
-              <size>
-               <width>40</width>
-               <height>20</height>
-              </size>
-             </property>
-            </spacer>
-           </item>
            <item alignment="Qt::AlignHCenter">
             <widget class="QFrame" name="loadFrame">
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+               <horstretch>1</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
              <property name="minimumSize">
               <size>
                <width>160</width>
@@ -675,41 +627,23 @@ color: rgb(0, 0, 0);</string>
              <zorder>loadVSpacer1</zorder>
             </widget>
            </item>
-           <item>
-            <spacer name="loadRSpacer">
-             <property name="font">
-              <font>
-               <family>Verdana</family>
-              </font>
-             </property>
-             <property name="orientation">
-              <enum>Qt::Horizontal</enum>
-             </property>
-             <property name="sizeHint" stdset="0">
-              <size>
-               <width>40</width>
-               <height>20</height>
-              </size>
-             </property>
-            </spacer>
-           </item>
            <item alignment="Qt::AlignRight">
             <widget class="QFrame" name="previewFrame">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
-               <horstretch>0</horstretch>
+               <horstretch>1</horstretch>
                <verstretch>0</verstretch>
               </sizepolicy>
              </property>
              <property name="minimumSize">
               <size>
-               <width>150</width>
+               <width>120</width>
                <height>0</height>
               </size>
              </property>
              <property name="maximumSize">
               <size>
-               <width>150</width>
+               <width>200</width>
                <height>16777215</height>
               </size>
              </property>
@@ -759,13 +693,13 @@ color: rgb(0, 0, 0);</string>
                <widget class="QListWidget" name="previewListWidget">
                 <property name="minimumSize">
                  <size>
-                  <width>120</width>
+                  <width>140</width>
                   <height>150</height>
                  </size>
                 </property>
                 <property name="maximumSize">
                  <size>
-                  <width>250</width>
+                  <width>500</width>
                   <height>16777215</height>
                  </size>
                 </property>
@@ -778,7 +712,7 @@ color: rgb(0, 0, 0);</string>
                 <property name="styleSheet">
                  <string notr="true">background-color: rgb(255, 255, 255);
 color: rgb(0, 0, 0);
-alternate-background-color: rgb(169, 236, 239);</string>
+alternate-background-color: rgb(193, 193, 193);</string>
                 </property>
                 <property name="horizontalScrollBarPolicy">
                  <enum>Qt::ScrollBarAsNeeded</enum>
@@ -804,21 +738,16 @@ alternate-background-color: rgb(169, 236, 239);</string>
             </widget>
            </item>
            <item>
-            <spacer name="loadFarRSpacer">
-             <property name="font">
-              <font>
-               <family>Verdana</family>
-              </font>
-             </property>
+            <spacer name="horizontalSpacer_13">
              <property name="orientation">
               <enum>Qt::Horizontal</enum>
              </property>
              <property name="sizeType">
-              <enum>QSizePolicy::Expanding</enum>
+              <enum>QSizePolicy::Minimum</enum>
              </property>
              <property name="sizeHint" stdset="0">
               <size>
-               <width>25</width>
+               <width>5</width>
                <height>20</height>
               </size>
              </property>
